--- a/css/style.css
+++ b/css/style.css
@@ -53,11 +53,12 @@ canvas{
 
 .flex-container{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: right;
+    align-items: right;
     height:100vh;
-    width:100vw;
-   
+    width:100%;
+    margin-top: auto;
+  
     
 
     flex-direction:column;
@@ -80,7 +81,7 @@ canvas{
     letter-spacing: .6rem;
     justify-content: right;
     margin-top:150px;
-    padding-left: 200px;
+    padding-left: 500px;
 }
 
 
@@ -93,7 +94,8 @@ h2{
     font-size: 36px;
     justify-content: center;
     letter-spacing: .1rem;
-    margin-top:-50px;
+    margin-top:-100px;
+    padding-left: 400px;
 
 }
 
@@ -105,23 +107,25 @@ h3{
     margin-top: -20px;
     letter-spacing: .1rem;
     font-style: italic;
+    padding-left: 550px;
 } 
 
 
 
 .flex-container1{
     display:flex;
-    height:0vh;
-    width:100vw;
+    height: 0vh;
+    width:0vw;
     padding-left:10px;
     color: black;
     font-family: "Raleway", sans-serif;
     font-size: 18px;
+    justify-content: left;
     
 }
 
 .flex-container2{
-    display:flex;
+    display:column;
     height: auto;
     width:100vw;
     padding-left:10px;
@@ -241,7 +245,7 @@ box-shadow: #81c2ab;
 #about{
     justify-content: center;
      margin-top: 10px;
-     margin-left:775px;
+     margin-left:750px;
     letter-spacing: .1rem;
 
 }
@@ -255,7 +259,7 @@ box-shadow: #81c2ab;
 #contact{
     justify-content: center;
      margin-top: 0px;
-     margin-left:1300px;
+     margin-left:1260px;
     letter-spacing: .1rem;
 }
 
@@ -289,3 +293,56 @@ background: linear-gradient(rgba(247,135,100,1) 0%, rgba(237,108,68,1) 35%, rgba
     color:#EBEBD3;
 }
 
+a{
+    color: #083D77;
+    text-decoration: none;
+}
+
+
+/* Dropdown Button */
+.dropbtn {
+    font-size: 18px;
+    text-align: left; /* Added property to align text on the left */
+    color: #000000;
+    font-family: 'Michroma', sans-serif;
+    text-decoration: none;
+   
+   
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+  padding-left:10px;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #F2F0EB;
+  min-width: 160px;
+box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+border-color:#000000;
+  z-index: 1;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: #da407b;}
