--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ h4{
     flex-direction: row;
     height: 5vh;
     width: 100vw;
-    background-color: rgb(240, 25, 104);
+    background-color: #EBE884;
     font-family: "Raleway", sans-serif;
     border-radius: 10px 10px 10px 10px;
     
