--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,12 @@
+/* CSS Reset */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 canvas{
-    display:block;
+    display: block;
 }
 
 #three-body{
@@ -10,22 +16,15 @@ canvas{
     /* z-index: 1; */
 }
 
-body, html {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-}
-
 
 
 a{
     text-decoration: none;
     color: black;
-
 }
 
 a:hover{
-color: yellow;
+    color: yellow;
 }
 
 #archive{
@@ -35,12 +34,11 @@ color: yellow;
     padding: 10px;
     font-family: "Raleway", sans-serif;
     font-size: 18px;
-    color: rgb(255, 255, 255);
-
+    color: black;
 }
 
 #archive:hover{
-    color: yellow;
+    color: red;
 }
 
 #blog{
@@ -50,11 +48,11 @@ color: yellow;
     padding: 10px;
     font-family: "Raleway", sans-serif;
     font-size: 18px;
-    color: rgb(255, 255, 255);
+    color: black;
 }
 
 #blog:hover{
-    color: yellow;
+    color: red;
 }
 
 #about{
@@ -64,88 +62,28 @@ color: yellow;
     padding: 10px;
     font-family: "Raleway", sans-serif;
     font-size: 18px;
-    color: rgb(255, 255, 255);
+    color: black;
     transform: translateX(-50%);
 }
 
 #about:hover{
-    color: yellow;
+    color: red;
 }
 
-
-.flexbox{
-width: 100%;
-height: 100vh;
-
-}
-
-.flex-container{
-    display: flex;
-    justify-content: center;
-    align-items: right;
-    height:30vh;
-    width:100%;
-    margin-top: auto;
+#home{
     position: absolute;
-    border-radius: 0px 0px 20px 20px;
-
-}
-
-
-#hello{
-    position:absolute;
+    top: 100;
+    left: 0;
+    padding: 10px;
+    font-family: "Raleway", sans-serif;
+    font-size: 18px;
     color: black;
-    font-family: "Syncopate", sans-serif;
-    font-style: bold;
-    font-weight: 400;
-    font-size: 130px;
-    line-height: 85%;
-    letter-spacing: .6rem;
-    justify-content: center;
-    margin-top: 80px;
-    position: absolute
 
 }
 
-
-
-
-
-h2{
-    color: black;
-    font-family: "Jacquarda Bastarda 9", serif;
-    font-size: 36px;
-    justify-content: center;
-    letter-spacing: .1rem;
-    margin-top:-150px;
-    padding-left: 440px;
-    display: center;
-    /* position: absolute; */
-    
-  
-
-}
-
-h2:hover{
+#home:hover{
     color: yellow;
-}
 
-
-
-h4{
-  position: absolute;
-  font-family: "Jacquarda Bastarda 9", sans-serif;
-    font-size: 20px;
-    color: rgb(105, 78, 162);
-    
-
-
-}
-
-.flex-container2{
-    display: column;
-    flex-direction: row;
-    margin-top: -150px;
 }
 
 .flex-container3{
@@ -153,29 +91,55 @@ h4{
     flex-direction: row;
     height: 5vh;
     width: 100vw;
-    background-color: #EBE884;
     font-family: "Raleway", sans-serif;
     border-radius: 10px 10px 10px 10px;
     
-   
-
 }
 
+.parent-container {
+    display: flex;
+    flex-wrap: nowrap;
+    height: 90vh;
+    
+}
 
+.flex-container {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: left;
+    flex-direction: column;
+    height: 100%;
+    width: 60%;
+   
+}
 
+.flex-container2 {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    width: 40%;
+   
+}
 
+.flex-item {
+    background-color: lightblue;
+    padding: 20px;
+    margin: 10px;
+    text-align: left;
+    border: 2px solid yellow;
+}
 
+.header {
+    background-color: lightblue;
+    padding: 20px;
+    margin: 10px;
+    text-align: left;
+    border: 2px solid yellow;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+#title{
+    font-family:"Pinyon Script", sans-serif;
+    font-size: 180px;
+}
