--- a/css/blog.css
+++ b/css/blog.css
@@ -152,7 +152,7 @@ p{
     align-items: center;
     height: 100%;
     width: 40%;
-    margin-top: 40px;
+    
    
 }
 
@@ -173,3 +173,100 @@ p{
    
 }
 
+
+
+.icon {
+    display:flex;
+    margin-left: 5px;
+    animation: colorChange 2s infinite; /* Add the animation */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+   font-family: 'Courier New', Courier, monospace;
+   font-size: 12px;
+   margin-top: -5px;
+   text-align: center;
+   transition: 0.3s;
+   
+    }
+
+
+@keyframes colorChange {
+    0% {
+        color: initial; /* Start with initial color */
+    }
+
+    25%{
+        color: red; /* Change to desired color a quarter of the way through */}
+    50% {
+        color: black; /* Change to desired color halfway through */
+
+    }
+    100% {
+        color: initial; /* Change back to initial color */
+    }
+}
+
+
+
+/* Popup container */
+.popup {
+    position: relative;
+    /* display: inline-block; */
+    cursor: pointer;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
+  font-size: 12px;
+  text-align: center;
+  height: 50%;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+
+  }
+  
+  /* The actual popup (appears on top) */
+   .popup .popuptext {
+    visibility: hidden;
+    width: 100px;
+    height:300px;
+    /* background-color: #555; */
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    /* padding: 8px 0; */
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    box-shadow: #9c4a70;
+  }  
+  
+  #popup-03{
+      margin-top: 600px;
+  }
+  
+  
+  /* Toggle this class when clicking on the popup container (hide and show the popup) */
+  .popup .show {
+    visibility: visible;
+    -webkit-animation: fadeIn .5s;
+    animation: fadeIn .5s
+    
+    
+  }
+  
+  
+  /* Add animation (fade in the popup) */
+  @-webkit-keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+  }
+  
+  @keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity:1 ;}
+  }
