--- a/css/about.css
+++ b/css/about.css
@@ -1,446 +1,136 @@
-body {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    height: auto;
-    flex-wrap: wrap;
-    --pink: #F1A6BD;
-    --cream: #FDFCEA;
-    --green: #1F4339;
-    --blue: #3975B3;
-    --orange: #E77553;
-    --delay: 0s;
-    background: var(--pink);
-  }
+/* CSS Reset */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+canvas{
+    display: block;
+}
+
+
+@font-face {
+    font-family: 'Fourmi';
+    src: url('../media/fonts/FOURMI-light2.otf') format('otf');
+    
+    font-weight: normal;
+    font-style: normal;
   
-  body.loaded #backgrounds {
-    width: 1000vw;
-    height: 100%;
-    position: fixed;
-    z-index: -1;
-    top: 0;
-    left: 0;
+  }
+
+
+  @font-face {
+    font-family: 'stairs';
+    src: url('../media/fonts/Stairs.otf') format('otf');
+    
+    font-weight: normal;
+    font-style: normal;
+  
+  }
+
+
+#three-body{
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
+    /* z-index: 1; */
+}
+
+
+
+a{
+    text-decoration: none;
+    color: black;
+}
+
+a:hover{
+    color: yellow;
+}
+
+#three-body{
+    width: 100%;
+    height: 90%;
+    margin: 0 auto;
+    z-index: 1;
+}
+
+#archive{
+   font-size: 30px;
+   
+}
+
+#archive:hover{
+    background-color: fuchsia;
+}
+
+#blog{
+  font-size: 30px;
+}
+
+#blog:hover{
+    background-color: fuchsia;
+}
+
+#about{
+  font-size: 30px;
+}
+
+#about:hover{
+   background-color: fuchsia;
+}
+
+
+
+.parent-container {
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    transform: translateX(calc(var(--total) * -1%)) skewX(calc(var(--velocity) * 5deg));
-  }
-  body.loaded #backgrounds .bg {
+    flex-wrap: wrap;
+    height: 100%;
+    flex-direction: row;
+    
+}
+
+.flex-container3{
     display: flex;
+    flex-direction: column;
+    width: 10%;
     height: 100vh;
-    width: 100vw;
-    background: var(--pink);
-    overflow: visible;
-    position: relative;
-  }
-  body.loaded #backgrounds .bg:before {
-    content: "";
+    align-items: center;
+ justify-content: space-around;
+ font-family: 'fourmi', sans-serif;
+    
+}
+
+
+
+.flex-container {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    height: auto;
+    width: 90%;
+  
+}
+
+
+
+
+h2{
+    font-size: 20px;
+    font-family:"Grenze Gotisch", serif;
+    font-size: 80px;
     position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: 2;
-    top: 0;
-    left: 100%;
-    background: var(--cream);
-    transform: scaleX(calc(var(--posvelocity)));
-    transform-origin: left;
-  }
-  body.loaded #backgrounds .bg:nth-of-type(1) {
-    z-index: 10;
-  }
-  body.loaded #backgrounds .bg:nth-of-type(2) {
-    z-index: 9;
-  }
-  body.loaded #backgrounds .bg:nth-of-type(3) {
-    z-index: 8;
-  }
-  body.loaded #backgrounds .bg:nth-of-type(4) {
-    z-index: 7;
-  }
-  body.loaded #backgrounds .bg:nth-of-type(5) {
-    z-index: 6;
-  }
-  body.loaded #backgrounds .bg:nth-of-type(6) {
-    z-index: 5;
-  }
-  body.loaded #backgrounds .bg:nth-of-type(7) {
-    z-index: 4;
-  }
-  body.loaded #backgrounds .bg:nth-of-type(8) {
-    z-index: 3;
-  }
-  body.loaded #backgrounds .bg:nth-of-type(9) {
-    z-index: 2;
-  }
-  body.loaded #backgrounds .bg:nth-of-type(10) {
-    z-index: 1;
-  }
-  body.loaded #backgrounds .bg:nth-of-type(2n) {
-    background: var(--cream);
-  }
-  body.loaded #backgrounds .bg:nth-of-type(2n):before {
-    background: var(--green);
-  }
-  body.loaded #backgrounds .bg:nth-of-type(3n) {
-    background: var(--orange);
-  }
-  body.loaded #backgrounds .bg:nth-of-type(3n):before {
-    background: var(--blue);
-  }
-  body.loaded #wrap {
-    width: calc(100% - 32px);
-    max-width: 1200px;
-    position: relative;
-    z-index: 1;
-  }
-  body.loaded #wrap #panels {
-    width: 100%;
-    height: 1000vh;
-  }
-  body.loaded #wrap #panels section.panel {
-    width: 100%;
-    height: 100vh;
-    position: relative;
-    box-sizing: border-box;
-    margin-bottom: 0vh;
-  }
-  body.loaded #wrap #panels section.panel .image {
-    transition: transform 1s cubic-bezier(0.645, 0.045, 0.355, 1);
-  }
-  body.loaded #wrap #panels section.panel .image:before {
-    transition: transform 0.75s cubic-bezier(0.645, 0.045, 0.355, 1);
-  }
-  body.loaded #wrap #panels section.panel .image .inner {
-    transform: translateY(125%);
-    transition: 1s cubic-bezier(0.645, 0.045, 0.355, 1);
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(2n) h1 span.word:before {
-    background-image: linear-gradient(to top, var(--green) 50%, var(--orange) 50%, var(--orange) 75%, var(--cream) 75%);
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(3n) .image.right {
-    width: 40vh;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(3n) h1 span.word:before {
-    background-image: linear-gradient(to top, var(--green) 50%, var(--cream) 50%, var(--cream) 75%, var(--pink) 75%);
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(4n) .image:first-of-type {
-    width: 40vh;
-  }
-  body.loaded #wrap #panels section.panel.active .image:nth-of-type(1) {
-    transition-delay: 1.15s;
-    transform: scaleY(1);
-  }
-  body.loaded #wrap #panels section.panel.active .image:nth-of-type(1):before {
-    transition-delay: 1.9s;
-    transform: scaleY(0);
-  }
-  body.loaded #wrap #panels section.panel.active .image:nth-of-type(2) {
-    transition-delay: 1.55s;
-    transform: scaleY(1);
-  }
-  body.loaded #wrap #panels section.panel.active .image:nth-of-type(2):before {
-    transition-delay: 2.3s;
-    transform: scaleY(0);
-  }
-  body.loaded #wrap #panels section.panel.active .image:nth-of-type(3) {
-    transition-delay: 1.95s;
-    transform: scaleY(1);
-  }
-  body.loaded #wrap #panels section.panel.active .image:nth-of-type(3):before {
-    transition-delay: 2.7s;
-    transform: scaleY(0);
-  }
-  body.loaded #wrap #panels section.panel.active .image .inner {
-    transform: translateY(0);
-  }
-  body.loaded #wrap #panels section.panel.active ~ section.panel .image {
-    transform-origin: top;
-    transform: scaleY(0);
-    transition: transform 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
-    transition-delay: 0.5s;
-  }
-  body.loaded #wrap #panels section.panel.active ~ section.panel .image:before {
-    transform-origin: bottom;
-    transform: scaleY(1);
-    transition: transform 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
-  }
-  body.loaded #wrap #panels section.panel.active ~ section.panel .image .inner {
-    transform: translateY(125%);
-  }
-  body.loaded #wrap #panels section.panel.active ~ section.panel h1 span:nth-of-type(3n):before, body.loaded #wrap #panels section.panel.active ~ section.panel h1 span:nth-of-type(3n):after {
-    transform: translateX(-50%) translateY(-200%);
-  }
-  body.loaded #wrap #panels section.panel.active ~ section.panel h1 span:before, body.loaded #wrap #panels section.panel.active ~ section.panel h1 span:after {
-    transform: translateX(-50%) translateY(200%);
-    background-position: 0% 100%;
-  }
-  body.loaded #wrap #panels section.panel.active h1 {
-    font-family: "Shrikhand", serif;
-    font-weight: 100;
-  }
-  body.loaded #wrap #panels section.panel.active h1 span.word:before {
-    transform: translateX(-50%) translateY(-50%);
-    background-position: 0% 17.5%;
-    transition-delay: calc(((var(--word-index)) * 0.15s) + var(--delay) + 1.5s), calc(((var(--word-index)) * 0.15s) + var(--delay) + 1.75s);
-  }
-  body.loaded #wrap #panels section.panel h1 {
+   
+}
+
+
+h1{
+    font-family:"stairs", serif;
+    font-size: 80px;
     position: absolute;
-    left: 50%;
-    top: 50%;
-    font-size: 12vmin;
-    z-index: 9;
-    transform: translate(-50%, -50%);
-    margin: 0px;
-    line-height: 10vmin;
-    width: 70vmin;
-  }
-  body.loaded #wrap #panels section.panel h1 span.word {
-    padding: 1vmin 10px;
-    display: inline-block;
-    overflow: hidden;
-    margin: -1vmin 0;
-    position: relative;
-    color: transparent;
-  }
-  body.loaded #wrap #panels section.panel h1 span.word:before {
-    content: attr(data-word);
-    color: var(--green);
-    position: absolute;
-    transform: translateX(-50%) translateY(175%);
-    transition: transform 0.5s cubic-bezier(0.645, 0.045, 0.355, 1), background-position 1s cubic-bezier(0.645, 0.045, 0.355, 1);
-    -webkit-text-stroke: 2px var(--green);
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-    background-image: linear-gradient(to top, var(--green) 50%, var(--cream) 50%, var(--cream) 75%, var(--pink) 75%);
-    background-size: 450% 450%;
-    background-position: 0% 100%;
-    padding: 1vmin 20px;
-    top: 50%;
-    left: 50%;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(even) {
-    transform: scaleX(-1);
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(even) h1 {
-    transform: translate(-50%, -50%) scaleX(-1);
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(1) .image {
-    transform: scaleY(0);
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(1) .image:nth-of-type(1) .inner:before {
-    background: url("https://assets.codepen.io/383755/fieri2.jpg") center/cover;
-    opacity: 0.5;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(1) .image:nth-of-type(2) .inner:before {
-    background: url("https://assets.codepen.io/383755/fieri3.jpg") center/cover;
-    opacity: 0.5;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(1) .image:nth-of-type(3) .inner:before {
-    background: url("https://assets.codepen.io/383755/fieri4.jpg") center/cover;
-    opacity: 0.5;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(2) .image {
-    transform: scaleY(0);
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(2) .image:nth-of-type(1) .inner:before {
-    background: url("https://assets.codepen.io/383755/fieri3.jpg") center/cover;
-    opacity: 0.5;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(2) .image:nth-of-type(2) .inner:before {
-    background: url("https://assets.codepen.io/383755/fieri4.jpg") center/cover;
-    opacity: 0.5;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(2) .image:nth-of-type(3) .inner:before {
-    background: url("https://assets.codepen.io/383755/fieri5.jpg") center/cover;
-    opacity: 0.5;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(3) .image {
-    transform: scaleY(0);
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(3) .image:nth-of-type(1) .inner:before {
-    background: url("https://assets.codepen.io/383755/fieri4.jpg") center/cover;
-    opacity: 0.5;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(3) .image:nth-of-type(2) .inner:before {
-    background: url("https://assets.codepen.io/383755/fieri5.jpg") center/cover;
-    opacity: 0.5;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(3) .image:nth-of-type(3) .inner:before {
-    background: url("https://assets.codepen.io/383755/fieri6.jpg") center/cover;
-    opacity: 0.5;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(4) .image {
-    transform: scaleY(0);
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(4) .image:nth-of-type(1) .inner:before {
-    background: url("https://assets.codepen.io/383755/fieri5.jpg") center/cover;
-    opacity: 0.5;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(4) .image:nth-of-type(2) .inner:before {
-    background: url("https://assets.codepen.io/383755/fieri6.jpg") center/cover;
-    opacity: 0.5;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(4) .image:nth-of-type(3) .inner:before {
-    background: url("https://assets.codepen.io/383755/fieri7.jpg") center/cover;
-    opacity: 0.5;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(5) .image {
-    transform: scaleY(0);
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(5) .image:nth-of-type(1) .inner:before {
-    background: url("https://assets.codepen.io/383755/fieri6.jpg") center/cover;
-    opacity: 0.5;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(5) .image:nth-of-type(2) .inner:before {
-    background: url("https://assets.codepen.io/383755/fieri7.jpg") center/cover;
-    opacity: 0.5;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(5) .image:nth-of-type(3) .inner:before {
-    background: url("https://assets.codepen.io/383755/fieri8.jpg") center/cover;
-    opacity: 0.5;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(6) .image {
-    transform: scaleY(0);
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(6) .image:nth-of-type(1) .inner:before {
-    background: url("https://assets.codepen.io/383755/fieri7.jpg") center/cover;
-    opacity: 0.5;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(6) .image:nth-of-type(2) .inner:before {
-    background: url("https://assets.codepen.io/383755/fieri8.jpg") center/cover;
-    opacity: 0.5;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(6) .image:nth-of-type(3) .inner:before {
-    background: url("https://assets.codepen.io/383755/fieri9.jpg") center/cover;
-    opacity: 0.5;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(7) .image {
-    transform: scaleY(0);
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(7) .image:nth-of-type(1) .inner:before {
-    background: url("https://assets.codepen.io/383755/fieri8.jpg") center/cover;
-    opacity: 0.5;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(7) .image:nth-of-type(2) .inner:before {
-    background: url("https://assets.codepen.io/383755/fieri9.jpg") center/cover;
-    opacity: 0.5;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(7) .image:nth-of-type(3) .inner:before {
-    background: url("https://assets.codepen.io/383755/fieri10.jpg") center/cover;
-    opacity: 0.5;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(8) .image {
-    transform: scaleY(0);
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(8) .image:nth-of-type(1) .inner:before {
-    background: url("https://assets.codepen.io/383755/fieri9.jpg") center/cover;
-    opacity: 0.5;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(8) .image:nth-of-type(2) .inner:before {
-    background: url("https://assets.codepen.io/383755/fieri10.jpg") center/cover;
-    opacity: 0.5;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(8) .image:nth-of-type(3) .inner:before {
-    background: url("https://assets.codepen.io/383755/fieri11.jpg") center/cover;
-    opacity: 0.5;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(9) .image {
-    transform: scaleY(0);
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(9) .image:nth-of-type(1) .inner:before {
-    background: url("https://assets.codepen.io/383755/fieri10.jpg") center/cover;
-    opacity: 0.5;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(9) .image:nth-of-type(2) .inner:before {
-    background: url("https://assets.codepen.io/383755/fieri11.jpg") center/cover;
-    opacity: 0.5;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(9) .image:nth-of-type(3) .inner:before {
-    background: url("https://assets.codepen.io/383755/fieri12.jpg") center/cover;
-    opacity: 0.5;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(10) .image {
-    transform: scaleY(0);
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(10) .image:nth-of-type(1) .inner:before {
-    background: url("https://assets.codepen.io/383755/fieri11.jpg") center/cover;
-    opacity: 0.5;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(10) .image:nth-of-type(2) .inner:before {
-    background: url("https://assets.codepen.io/383755/fieri12.jpg") center/cover;
-    opacity: 0.5;
-  }
-  body.loaded #wrap #panels section.panel:nth-of-type(10) .image:nth-of-type(3) .inner:before {
-    background: url("https://assets.codepen.io/383755/fieri13.jpg") center/cover;
-    opacity: 0.5;
-  }
-  body.loaded #wrap #panels section.panel .image {
-    width: 30vh;
-    height: 30vh;
-    position: absolute;
-    overflow: hidden;
-    top: 5vh;
-    left: 10vh;
-    z-index: 3;
-    box-sizing: border-box;
-    transform-origin: bottom;
-  }
-  body.loaded #wrap #panels section.panel .image:before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    background: var(--blue);
-    transform-origin: top;
-  }
-  body.loaded #wrap #panels section.panel .image * {
-    box-sizing: border-box;
-  }
-  body.loaded #wrap #panels section.panel .image:nth-of-type(2) {
-    top: auto;
-    bottom: 7.5vh;
-    right: 10vh;
-    left: auto;
-    height: 50vh;
-  }
-  body.loaded #wrap #panels section.panel .image:nth-of-type(2):before {
-    background: var(--green);
-  }
-  body.loaded #wrap #panels section.panel .image:nth-of-type(3) {
-    top: auto;
-    bottom: 5vh;
-    left: 15vh;
-  }
-  body.loaded #wrap #panels section.panel .image .inner {
-    position: absolute;
-    width: calc(100% - 5px);
-    height: calc(100% - 5px);
-    left: 2.5px;
-    top: 2.5px;
-    z-index: -1;
-    background: var(--green);
-  }
-  body.loaded #wrap #panels section.panel .image .inner:after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0px;
-    top: 0px;
-    z-index: 1;
-    background: var(--cream);
-    mix-blend-mode: darken;
-  }
-  body.loaded #wrap #panels section.panel .image .inner:before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0px;
-    top: 0px;
-    z-index: 2;
-    filter: saturate(0) contrast(2);
-    mix-blend-mode: lighten;
-  }
+    margin-top: 50px;
+}
+
+
