--- a/css/blog.css
+++ b/css/blog.css
@@ -9,6 +9,17 @@ canvas{
     display: block;
 }
 
+
+@font-face {
+    font-family: 'kupole';
+    src: url('../media/fonts/KUPOLE-Regular.ttf') format('ttf');
+    
+    font-weight: normal;
+    font-style: normal;
+  
+  }
+
+
 #three-body{
     width: 100%;
     height: 90%;
@@ -28,67 +39,32 @@ a:hover{
 }
 
 #archive{
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding: 10px;
-    font-family: "IBM Plex Mono", static;
-    font-size: 18px;
-    color: black;
-    border: 2px solid black;
-}
+    font-size: 30px;
+    
+ }
+ 
+ #archive:hover{
+     background-color: fuchsia;
+ }
+ 
+ #blog{
+   font-size: 30px;
+ }
+ 
+ #blog:hover{
+     background-color: fuchsia;
+ }
+ 
+ #about{
+   font-size: 30px;
+ }
+ 
+ #about:hover{
+    background-color: fuchsia;
+ }
+ 
+ 
 
-#archive:hover{
-    color: red;
-}
-
-#blog{
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 10px;
-    font-family: "IBM Plex Mono", static;
-    font-size: 18px;
-    color: black;
-    border: 2px solid black;
-}
-
-#blog:hover{
-    color: red;
-}
-
-#about{
-    position: absolute;
-    top: 0;
-    left: 50%;
-    padding: 10px;
-    font-family: "IBM Plex Mono", static;
-    font-size: 18px;
-    color: black;
-    transform: translateX(-50%);
-    border: 2px solid black;
-}
-
-#about:hover{
-    color: red;
-}
-
-#home{
-    position: absolute;
-    top: 100;
-    left: 0;
-    padding: 10px;
-    font-family: "IBM Plex Mono", static;
-    font-size: 18px;
-    color: black;
-    border: 2px solid black;
-
-}
-
-#home:hover{
-    color: yellow;
-
-}
 
 #hello{
     font-family: "Raleway", san-serif;
@@ -96,7 +72,7 @@ a:hover{
 }
 
 #title{
-    font-family: "IBM Plex Mono", static;
+    font-family: "kupole";
     font-size: 120px;
 }
 
@@ -116,22 +92,25 @@ h2{
 p{
     font-family: "Courier New", san-serif;
     font-size: 13px;
-}
-
-.flex-container3{
-    display: flex;
-    flex-direction: row;
-    height: 5vh;
-    width: 100vw;
-    font-family: "Raleway", sans-serif;
-    border-radius: 10px 10px 10px 10px;
-    
+    background-color: yellow;
 }
 
 .parent-container {
     display: flex;
-    flex-wrap: nowrap;
-    height: 90vh;
+    flex-wrap: wrap;
+    height: 100%;
+    flex-direction: row;
+    
+}
+
+.flex-container3{
+    display: flex;
+    flex-direction: column;
+    width: 10%;
+    height: 100vh;
+    align-items: center;
+ justify-content: space-around;
+ font-family: 'fourmi', sans-serif;
     
 }
 
@@ -147,11 +126,12 @@ p{
 
 .flex-container2 {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
     height: 100%;
-    width: 40%;
+    width: 20%;
+    padding: 10;
     
    
 }
