--- a/css/archive.css
+++ b/css/archive.css
@@ -19,7 +19,7 @@ body, html {
     height: 100%;
 }
 
-
+/* 
 .flex-container3{
     display: flex;
     flex-direction: row;
@@ -27,6 +27,28 @@ body, html {
     width: 100vw;
     font-family: "Raleway", sans-serif;
     border-radius: 10px 10px 10px 10px;
+} */
+
+
+
+.parent-container {
+    display: flex;
+    flex-wrap: wrap;
+    height: 100%;
+    flex-direction: row;
+    
+}
+
+.flex-container3{
+    display: flex;
+    flex-direction: column;
+    width: 10%;
+    height: 100vh;
+    align-items: center;
+ justify-content: space-around;
+ font-family: 'fourmi', sans-serif;
+ background-color: orange;
+    
 }
 
 
@@ -40,66 +62,48 @@ a:hover{
 color: yellow;
 }
 
+
 #archive{
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding: 10px;
-    font-family: "Raleway", sans-serif;
-    font-size: 18px;
-    color: rgb(255, 255, 255);
-
-}
-
-#archive:hover{
-    color: yellow;
-}
-
-#blog{
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 10px;
-    font-family: "Raleway", sans-serif;
-    font-size: 18px;
-    color: rgb(255, 255, 255);
-}
-
-#blog:hover{
-    color: yellow;
-}
-
-#about{
-    position: absolute;
-    top: 0;
-    left: 50%;
-    padding: 10px;
-    font-family: "Raleway", sans-serif;
-    font-size: 18px;
-    color: rgb(255, 255, 255);
-    transform: translateX(-50%);
-}
-
-#about:hover{
-    color: yellow;
-}
+    font-size: 30px;
+    
+ }
+ 
+ #archive:hover{
+     background-color: fuchsia;
+ }
+ 
+ #blog{
+   font-size: 30px;
+ }
+ 
+ #blog:hover{
+     background-color: fuchsia;
+ }
+ 
+ #about{
+   font-size: 30px;
+ }
+ 
+ #about:hover{
+    background-color: fuchsia;
+ }
+ 
 
 
-.flexbox{
-width: 100%;
-height: 100vh;
-
-}
 
 .flex-container{
     display: flex;
     justify-content: center;
     align-items: right;
-    height:30vh;
-    width:100%;
+    height:auto;
+    width:90%;
     margin-top: auto;
     position: absolute;
-    border-radius: 0px 0px 20px 20px;
+    margin-left: 100px;
+    margin-right: 500px;
+   
+  
+   
 
 }
 
