--- a/css/blog.css
+++ b/css/blog.css
@@ -98,18 +98,34 @@ a{
 }
 
 h1{
+    font-family: "Tiltortion", sans-serif;
+    font-size: 26px;
+    color: #FFB6C1;
+   padding-top: 2px;
+   margin-bottom: -20px;
+   animation: blink 1s infinite;
+ 
+    
+}
+@keyframes blink {
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+h2{
     font-family: "Tiltortion", san-serif;
-    font-size: 30px;
+    font-size: 28px;
     color: #FFB6C1;
    padding-top: 2px;
    margin-bottom: -20px;
  
-    
-}
-
-h2{
-    font-family: "Courier New", san serif;
-    font-size: 19px;
 }
 
 p{
@@ -144,7 +160,7 @@ p{
     flex-wrap: nowrap;
     align-items: left;
     flex-direction: column;
-    height: auto;
+    height: 200vh;
     width: 60%;
     border: 3px solid #FFB6C1;
   padding: 5px;
@@ -179,13 +195,14 @@ p{
     flex-direction: row;
     width: 100%;
     height: 15vh;
-    background-color: yellow;
+    font-family: "Amakan-Strips", san-serif;
+    justify-content: space-around;
 }
 
 .header2{
     display: flex;
     flex-wrap: nowrap;
-    flex-direction: row;
+    flex-direction: column;
     width: 100%;
     height: 15vh;
    padding: 20px;
@@ -212,57 +229,51 @@ p{
 
 
 .icon {
-    display:flex;
-    margin-left: 5px;
-    animation: colorChange 2s infinite; /* Add the animation */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-   font-family: 'Courier New', Courier, monospace;
-   font-size: 12px;
-   margin-top: -5px;
-   text-align: center;
-   transition: 0.3s;
+    background-color: #FFB6C1;
+    color: #6F4E37;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    /*  center the button */
+    position: absolute;
+    top: 12%;   
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: "Amakan-Strips", san-serif;
+    z-index: 1;
+    animation: colorChange 3s infinite;
    
     }
 
 
 @keyframes colorChange {
     0% {
-        color: initial; /* Start with initial color */
+        color: #FFB6C1; /* Start with initial color */
     }
 
     25%{
-        color: red; /* Change to desired color a quarter of the way through */}
+        color: #6F4E37;  /* Change to desired color a quarter of the way through */}
     50% {
-        color: black; /* Change to desired color halfway through */
+       color: #FFB6C1; /* Change to desired color halfway through */
 
     }
     100% {
-        color: initial; /* Change back to initial color */
+        color: #6F4E37; /* Change back to initial color */
     }
 }
 
 
 
 /* Popup container */
-.popup {
-    position: relative;
-    /* display: inline-block; */
-    cursor: pointer;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    font-family: 'Courier New', Courier, monospace;
+/* .popup {
   font-size: 12px;
   text-align: center;
-  height: 50%;
-  width: 50%;
+
   margin-left: auto;
   margin-right: auto;
 
-  }
+  } */
   
   /* The actual popup (appears on top) */
    .popup .popuptext {
@@ -282,7 +293,7 @@ p{
   }  
   
   #popup-03{
-      margin-top: 600px;
+      margin-top: 10px;
   }
   
   
@@ -356,4 +367,103 @@ p{
 
 .bg-anim {
 animation: changeBackgroundColor 3s infinite;
+}
+
+
+/* Style form elements */
+#form-container {
+    
+    width: 100%;
+    max-width: 400px;
+    /* margin-top:70px; */
+    padding: 20px;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: light;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"],
+textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #6F4E37;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+}
+
+textarea {
+    height: 150px;
+}
+
+input[type="submit"] {
+    background-color: #6F4E37;
+    color: #FFB6C1;
+    padding: 10px 20px;
+    border: 2px solid #FFB6C1;
+    border-radius: 4px;
+    cursor: pointer;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+input[type="submit"]:hover {
+    background-color: #FFB6C1;
+}
+
+/* Style message */
+.message {
+    font-size: 14px;
+    color: #6F4E37;;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+/* Style form elements */
+input[type="text"],
+input[type="email"],
+input[type="password"],
+select,
+textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+}
+
+/* Style text area */
+textarea {
+    height: 150px;
+}
+
+
+.scrollbar {
+    display: flex;
+    overflow: hidden; /* Hide the overflow to ensure the scrolling looks clean */
+    animation: scroll 20s linear infinite;
+    object-fit: contain;
+    background-color: #FFB6C1;
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    height: auto;
+    align-items: center;
+    font-family: 'fourmi', sans-serif;
+}
+
+
+
+@keyframes scroll {
+    from {
+        transform: translateX(100%); /* Start position off-screen to the right */
+    }
+    to {
+        transform: translateX(-100%); /* End position off-screen to the left */
+    }
 }
