--- a/css/blog.css
+++ b/css/blog.css
@@ -247,6 +247,64 @@ p{
     }
 
 
+
+.icon2 {
+    background-color: #FFB6C1;
+    color: #6F4E37;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    /*  center the button */
+    position: absolute;
+    top: 32%;   
+    left: 20%;
+    transform: translate(-50%, -50%);
+    font-family: "Amakan-Strips", san-serif;
+    z-index: 1;
+    animation: colorChange 3s infinite;
+   
+    }
+
+    .icon3 {
+        background-color: #FFB6C1;
+        color: #6F4E37;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        /*  center the button */
+        position: absolute;
+        top: 82%;   
+        left: 90%;
+        transform: translate(-50%, -50%);
+        font-family: "Amakan-Strips", san-serif;
+        z-index: 1;
+        animation: colorChange 3s infinite;
+       
+        }
+
+
+        .icon4 {
+            background-color: #FFB6C1;
+            color: #6F4E37;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            /*  center the button */
+            position: absolute;
+            top: 72%;   
+            left: 14%;
+            transform: translate(-50%, -50%);
+            font-family: "Amakan-Strips", san-serif;
+            z-index: 1;
+            animation: colorChange 3s infinite;
+           
+            }
+    
+
+
 @keyframes colorChange {
     0% {
         color: #FFB6C1; /* Start with initial color */
@@ -466,4 +524,14 @@ textarea {
     to {
         transform: translateX(-100%); /* End position off-screen to the left */
     }
+}
+
+h3{
+    position: absolute;
+    font-family: "Amakan-Strips", san-serif;
+    font-size: 28px;
+    top: 42%;
+    left: 62%;
+    color: #6F4E37;
+    background-color: #FFB6C1;
 }
